--- a/improve-dev.yml
+++ b/improve-dev.yml
@@ -1,1 +1,13 @@
 test: dev124414
+spring:
+  datasource:    
+    url: jdbc:mysql://db.hzero.org:3306/mysql?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath*:com/example/**/sqlMap/*MySql.xml
+spring: 
+  thymeleaf: 
+    cache: true
