--- a/improve-dev.yml
+++ b/improve-dev.yml
@@ -2,6 +2,8 @@ test: dev124414
 spring:
   datasource:    
     url: jdbc:mysql://db.hzero.org:3306/mysql?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url1: jdbc:mysql://db.hzero.org:3306/mysql1?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url2: jdbc:mysql://db.hzero.org:3306/mysql2?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
